--- a/index.html
+++ b/index.html
@@ -16,15 +16,9 @@
             <span class="title">Original Trombones</span>
         </div>
         <nav id="nav-bar">
-            <div class="nav-link">
-                <a href="#features">Features</a>
-            </div>
-            <div class="nav-link">
-                <a href="#about">How It Works</a>
-            </div>
-            <div class="nav-link">
-                <a href="#pricing">Pricing</a>
-            </div>
+            <a href="#features" class="nav-link">Features</a>
+            <a href="#about" class="nav-link">How It Works</a>
+            <a href="#pricing" class="nav-link">Pricing</a>
         </nav>
     </header>
     <main id="main-content">
