--- a/index.html
+++ b/index.html
@@ -30,5 +30,6 @@
             <iframe id="video" width="100%" height="100%" src="https://www.youtube.com/embed/Rxq6yCWvoug" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
     </main>
+    <script src="app.js"></script>
 </body>
 </html>
