--- a/index.html
+++ b/index.html
@@ -21,15 +21,66 @@
             <a href="#pricing" class="nav-link">Pricing</a>
         </nav>
     </header>
-    <main id="main-content">
-        <form action="" id="form">
-            <input type="email" id="email" placeholder="Enter here your email">
-            <input type="submit" id="submit" value="Get started">
-        </form>
-        <div class="video-container">
+    <main id="content">
+        <section id="get-started">
+            <h1 id="features" class="title-h1">Here your dreams can come true!</h1>
+            <form action="" id="form">
+                <input type="email" id="email" placeholder="Enter here your email">
+                <input type="submit" id="submit" value="Get started">
+            </form>
+        </section>
+        <section id="products">
+            <div class="materials">
+                <box-icon name='hot' type='solid' ></box-icon>
+                <h2>Premium Materials</h2>
+                <p>Our trombones use the shiniest brass which is sourced locally. This will increase the longevity of your purchase.</p>
+            </div>
+            <div class="shipping">
+                <box-icon type='solid' name='truck'></box-icon>
+                <h2>Fast Shipping</h2>
+                <p>We make sure you recieve your trombone as soon as we have finished making it. We also provide free returns if you are not satisfied.</p>
+            </div>
+            <div class="assurance">
+                <box-icon name='certification' type='solid' ></box-icon>
+                <h2>Quality Assurance</h2>
+                <p>For every purchase you make, we will ensure there are no damages or faults and we will check and test the pitch of your instrument.</p>
+            </div>
+        </section>
+        <section id="video-container">
+            <h3 id="about">Here is what is all about. Whatch the video to learn more!</h3>
             <iframe id="video" width="100%" height="100%" src="https://www.youtube.com/embed/Rxq6yCWvoug" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </div>
+        </section>
+        <section id="pricing">
+            <div class="tenor">
+                <h3>Tenor Trombone</h3>
+                <span>$600</span>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius odit rerum odio perferendis et tenetur error similique dicta labore ut? Qui quasi, voluptates quam ab dolorum soluta deserunt. Delectus, veniam?</p>
+                <button class="btn-select">Buy it!</button>
+            </div>
+            <div class="bass">
+                <h3>Bass Trombone</h3>
+                <span>$900</span>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam officia quisquam error sunt tempora exercitationem ea quod expedita reprehenderit quo, nam, ut ex soluta amet temporibus deserunt cum, obcaecati repellendus.</p>
+                <button class="btn-select">Buy it!</button>
+            </div>
+            <div class="valve">
+                <h3>Valve Trombone</h3>
+                <span>$1200</span>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam in a laborum suscipit maxime, accusantium animi atque harum repudiandae aut expedita voluptates natus aliquid unde nemo odit officia magni quo?</p>
+                <button class="btn-select">Buy it!</button>
+            </div>
+        </section>
     </main>
+    <footer id="footer">
+        <div class="">
+            <h5>Privacy</h5>
+            <h5>Terms</h5>
+            <h5>Contact</h5>
+        </div>
+        <div class="copyright">
+            <p>Copyright 2022, Orignal Trombones</p>
+        </div>
+    </footer>
     <script src="app.js"></script>
 </body>
 </html>
