--- a/index.html
+++ b/index.html
@@ -25,25 +25,31 @@
         <section id="get-started">
             <h1 id="features" class="title-h1">Here your dreams can come true!</h1>
             <form action="" id="form">
-                <input type="email" id="email" placeholder="Enter here your email">
+                <input type="email" id="email" placeholder="Enter your email here...">
                 <input type="submit" id="submit" value="Get started">
             </form>
         </section>
         <section id="products">
             <div class="materials">
-                <box-icon name='hot' type='solid' ></box-icon>
-                <h2>Premium Materials</h2>
-                <p>Our trombones use the shiniest brass which is sourced locally. This will increase the longevity of your purchase.</p>
+                <div class="title-products">
+                    <box-icon id="fire" class="icon" name='hot' type='solid' ></box-icon>
+                    <h2>Premium Materials</h2>
+                </div>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur neque voluptatem et ratione provident dolore placeat aperiam nam labore. Porro ratione vel aperiam perspiciatis facere consequatur iste temporibus sed officiis. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis rerum quaerat aspernatur voluptatibus laudantium autem quos placeat, distinctio voluptates qui, modi accusantium, deleniti vitae assumenda? At cumque neque provident! Quaerat.</p>
             </div>
             <div class="shipping">
-                <box-icon type='solid' name='truck'></box-icon>
-                <h2>Fast Shipping</h2>
-                <p>We make sure you recieve your trombone as soon as we have finished making it. We also provide free returns if you are not satisfied.</p>
+                <div class="title-products">
+                    <box-icon id="truck" class="icon" type='solid' name='truck'></box-icon>
+                    <h2>Fast Shipping</h2>
+                </div>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minima officiis dolorum deserunt esse! Optio, tempora atque nulla maiores provident unde enim porro ab harum cumque architecto dolore facilis quo debitis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor quidem tempora cumque harum blanditiis, id animi tempore. Itaque harum, iste maiores nam, nulla vitae ratione sit praesentium rem unde repellat.</p>
             </div>
             <div class="assurance">
-                <box-icon name='certification' type='solid' ></box-icon>
-                <h2>Quality Assurance</h2>
-                <p>For every purchase you make, we will ensure there are no damages or faults and we will check and test the pitch of your instrument.</p>
+                <div class="title-products">
+                    <box-icon id="certification" class="icon" type="solid" name='certification' type='solid' ></box-icon>
+                    <h2>Quality Assurance</h2>
+                </div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, magni minus. Ex in harum officia omnis, aspernatur quos rerum recusandae ratione consectetur, nemo laudantium, ipsam quisquam nostrum tempora ut esse? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae, fuga praesentium? Fuga iste atque, voluptate quasi aut ex facere earum dignissimos magnam impedit nisi non reprehenderit exercitationem. Atque, hic aperiam?</p>
             </div>
         </section>
         <section id="video-container">
