--- a/index.html
+++ b/index.html
@@ -35,21 +35,28 @@
                     <box-icon id="fire" class="icon" name='hot' type='solid' ></box-icon>
                     <h2>Premium Materials</h2>
                 </div>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur neque voluptatem et ratione provident dolore placeat aperiam nam labore. Porro ratione vel aperiam perspiciatis facere consequatur iste temporibus sed officiis. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis rerum quaerat aspernatur voluptatibus laudantium autem quos placeat, distinctio voluptates qui, modi accusantium, deleniti vitae assumenda? At cumque neque provident! Quaerat.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet atque delectus iste nihil consequatur fuga ipsa sunt, doloremque similique voluptas saepe nam? Assumenda architecto perspiciatis nisi expedita fugiat quis voluptatum!</p>
             </div>
             <div class="shipping">
                 <div class="title-products">
                     <box-icon id="truck" class="icon" type='solid' name='truck'></box-icon>
                     <h2>Fast Shipping</h2>
                 </div>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minima officiis dolorum deserunt esse! Optio, tempora atque nulla maiores provident unde enim porro ab harum cumque architecto dolore facilis quo debitis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor quidem tempora cumque harum blanditiis, id animi tempore. Itaque harum, iste maiores nam, nulla vitae ratione sit praesentium rem unde repellat.</p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi consequuntur eligendi doloremque debitis enim eum corrupti tenetur soluta, dolorem atque totam ducimus doloribus quae iusto quos rerum sed incidunt obcaecati?</p>
             </div>
             <div class="assurance">
                 <div class="title-products">
                     <box-icon id="certification" class="icon" type="solid" name='certification' type='solid' ></box-icon>
                     <h2>Quality Assurance</h2>
                 </div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, magni minus. Ex in harum officia omnis, aspernatur quos rerum recusandae ratione consectetur, nemo laudantium, ipsam quisquam nostrum tempora ut esse? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae, fuga praesentium? Fuga iste atque, voluptate quasi aut ex facere earum dignissimos magnam impedit nisi non reprehenderit exercitationem. Atque, hic aperiam?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, ab quis delectus unde molestiae officiis nam deserunt voluptatem magnam beatae cumque dolore tenetur vitae corrupti optio blanditiis nesciunt placeat at.</p>
+            </div>
+            <div class="assurance">
+                <div class="title-products">
+                    <box-icon id="book" class="icon" type='solid' name='book-alt'></box-icon>
+                    <h2>Unique experience</h2>
+                </div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam explicabo enim, ullam molestias odio quis natus facere, doloribus ipsa assumenda tempore ab accusamus quaerat corrupti incidunt quidem sunt distinctio vel!</p>
             </div>
         </section>
         <section id="video-container">
