--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 </div>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, ab quis delectus unde molestiae officiis nam deserunt voluptatem magnam beatae cumque dolore tenetur vitae corrupti optio blanditiis nesciunt placeat at.</p>
             </div>
-            <div class="assurance">
+            <div class="book">
                 <div class="title-products">
                     <box-icon id="book" class="icon" type='solid' name='book-alt'></box-icon>
                     <h2>Unique experience</h2>
@@ -59,9 +59,11 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam explicabo enim, ullam molestias odio quis natus facere, doloribus ipsa assumenda tempore ab accusamus quaerat corrupti incidunt quidem sunt distinctio vel!</p>
             </div>
         </section>
-        <section id="video-container">
+        <section id="video-section">
             <h3 id="about">Here is what is all about. Whatch the video to learn more!</h3>
-            <iframe id="video" width="100%" height="100%" src="https://www.youtube.com/embed/Rxq6yCWvoug" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div class="video-container">
+                <iframe id="video" width="100%" height="100%" src="https://www.youtube.com/embed/Rxq6yCWvoug" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
         </section>
         <section id="pricing">
             <div class="tenor">
