--- a/index.html
+++ b/index.html
@@ -67,22 +67,37 @@
         </section>
         <section id="pricing">
             <div class="tenor">
-                <h3>Tenor Trombone</h3>
+                <div class="title-subscription">
+                    <h3>Gold subscription<h3>
+                    <h4>Tenor Trombone</h4>
+                </div>
                 <span>$600</span>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius odit rerum odio perferendis et tenetur error similique dicta labore ut? Qui quasi, voluptates quam ab dolorum soluta deserunt. Delectus, veniam?</p>
-                <button class="btn-select">Buy it!</button>
+                <div class="btn-container">
+                    <div class="btn-select">Buy it!</div>
+                </div>
             </div>
             <div class="bass">
-                <h3>Bass Trombone</h3>
+                <div class="title-subscription">
+                    <h3>Diamond subscription</h3>
+                    <h4>Bass Trombone</h4>
+                </div>
                 <span>$900</span>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam officia quisquam error sunt tempora exercitationem ea quod expedita reprehenderit quo, nam, ut ex soluta amet temporibus deserunt cum, obcaecati repellendus.</p>
-                <button class="btn-select">Buy it!</button>
+                <div class="btn-container">
+                    <div class="btn-select">Buy it!</div>
+                </div>
             </div>
             <div class="valve">
-                <h3>Valve Trombone</h3>
+                <div class="title-subscription">
+                    <h3>Emerald subscription</h3>
+                    <h4>Valve Trombone</h4>
+                </div>
                 <span>$1200</span>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam in a laborum suscipit maxime, accusantium animi atque harum repudiandae aut expedita voluptates natus aliquid unde nemo odit officia magni quo?</p>
-                <button class="btn-select">Buy it!</button>
+                <div class="btn-container">
+                    <div class="btn-select">Buy it!</div>
+                </div>
             </div>
         </section>
     </main>
