--- a/index.html
+++ b/index.html
@@ -102,13 +102,37 @@
         </section>
     </main>
     <footer id="footer">
-        <div class="">
-            <h5>Privacy</h5>
-            <h5>Terms</h5>
-            <h5>Contact</h5>
+        <div class="icons">
+            <a href="https://www.facebook.com/" target="_blank">
+                <box-icon class="icon" type='logo' name='facebook-circle'></box-icon>
+            </a>
+            <a href="https://www.instagram.com/?hl=en" target="_blank">
+                <box-icon class="icon" name='instagram-alt' type='logo' ></box-icon>
+            </a>
+            <a href="https://twitter.com/?lang=en" target="_blank">
+                <box-icon class="icon" name='twitter' type='logo' ></box-icon>
+            </a>
+            <a href="https://www.youtube.com/" target="_blank">
+                <box-icon class="icon" name='youtube' type='logo' ></box-icon>
+            </a>
         </div>
-        <div class="copyright">
-            <p>Copyright 2022, Orignal Trombones</p>
+        <div class="text">
+            <div class="info">
+                <h5>Info</h5>
+                <span>*</span>
+                <h5>Support</h5>
+                <span>*</span>
+                <h5>Merketing</h5>
+            </div>
+            <div class="use">
+                <h5>Terms of Use</h5>
+                <span>*</span>
+                <h5>Privacy Policy</h5>
+            </div>
+            <div class="copyright">
+                <box-icon class="copyright-icon" name='copyright' type='solid' ></box-icon>
+                <p>Copyright 2022, Orignal Trombones</p>
+            </div>
         </div>
     </footer>
     <script src="app.js"></script>
