--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
     <title>Landing page</title>
 </head>
 <body>
-    <header id="header" class="x">
+    <header id="header" class="check-tag">
         <div class="container-logo">
             <box-icon class="logo" type='logo' name='netlify'></box-icon>
             <span class="title">Original Trombones</span>
         </div>
         <div id="expand-button">
-            <div class="expand-button-container">
+            <div id="expand-button-container" class="expand-button-container">
                 <box-icon class="btn-expand" name='expand-horizontal'></box-icon>
             </div>
         </div>
-        <nav id="nav-bar">
+        <nav id="nav-bar" class="navigation">
             <div class="nav-btn-container">
                 <a href="#features" class="nav-link">Features</a>
             </div>
