--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
         <nav id="nav-bar" class="navigation">
             <div class="nav-btn-container">
-                <a href="#features" class="nav-link">Features</a>
+                <a href="#products" class="nav-link">Products</a>
             </div>
             <div class="nav-btn-container">
                 <a href="#about" class="nav-link">About</a>
